fix: http to https

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
   let selectedTalk = "Select talk";
   let talks = JSON.parse(localStorage.getItem("talks") || '["Open"]');
   let messages = [];
-  let host = "http://peertest.liveblog365.com/index.php";
+  let host = "https://peertest.liveblog365.com/index.php";
   let interval = 12000;
   setInterval(checkMessages, interval);
 
