feat: add check endpoint

--- a/Peer/wwwroot/peer/indexx.html
+++ b/Peer/wwwroot/peer/indexx.html
@@ -272,18 +272,20 @@
 
     async function getAsync(url, filename) {
       try {
-        const response = await fetch(`${url}/peer/${filename}`);
-        if (!response.ok) {
-          return null;
+        const responsecheck = await fetch(`${url}/peer/check/${filename}`);
+        const text = await responsecheck.text()
+        if (text == "true") {
+          const response = await fetch(`${url}/peer/${filename}`);
+          if (response.ok) {
+            return await response.text();
+          }
         }
-        return await response.text();
-      } catch {
-        return null;
-      }
+      } catch {}
+      return null;
     }
 
     async function renderMessages() {
-      if (color.length == 0) {
+      if (document.hidden || color.length == 0) {
         return;
       }
       clearInterval(intervalId);
