--- a/Peer/wwwroot/peer/indexx.html
+++ b/Peer/wwwroot/peer/indexx.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Peer chat</title>
+  <meta property="og:title" content="Peer free chat">
+  <meta property="og:description" content="free chat">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Peer">
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='white'/%3E%3Ctext x='50' y='70' font-size='70' text-anchor='middle' font-family='Arial'%3EP%3C/text%3E%3C/svg%3E" type="image/svg+xml">
   <style>
     body,
     html {
