--- a/Peer/wwwroot/peer/indexx.html
+++ b/Peer/wwwroot/peer/indexx.html
@@ -55,6 +55,64 @@
       font-size: 1.2rem;
       user-select: none;
       background: #1f1f1f;
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: white;
+    }
+
+    #menuBtn {
+      background: transparent;
+      border: none;
+      color: white;
+      font-size: 1.5rem;
+      cursor: pointer;
+      padding: 0;
+      line-height: 1;
+    }
+
+    #menu {
+      position: absolute;
+      top: 100%;
+      right: 20px;
+      background: #2c2c2c;
+      border: 1px solid #444;
+      border-radius: 4px;
+      margin-top: 5px;
+      min-width: 120px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.5);
+      z-index: 1000;
+    }
+
+    #menu.hidden {
+      display: none;
+    }
+
+    #menu ul {
+      list-style: none;
+      margin: 0;
+      padding: 5px 0;
+    }
+
+    #menu li {
+      margin: 0;
+      padding: 0;
+    }
+
+    #menu button {
+      background: transparent;
+      border: none;
+      color: white;
+      width: 100%;
+      padding: 8px 15px;
+      text-align: left;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+
+    #menu button:hover {
+      background: #444;
     }
 
     .message {
@@ -313,7 +371,7 @@
         intervalId = setInterval(renderMessages, 12000);
         return;
       }
-      if (data.length <= 512 && dataid < 1200) {
+      if (data.length <= 512 && dataid < 800) {
         localStorage.setItem(`m${dataid - 1}`, data);
       }
       if (data.length <= 256 && dataid < 8000) {
@@ -349,7 +407,21 @@
         if (data.text === undefined) {
           textDiv.textContent = data;
         } else {
-          textDiv.textContent = data.text;
+          const text = data.text;
+          const urlRegex = /(https?:\/\/[^\s]+)/g;
+          const parts = text.split(urlRegex);
+          parts.forEach(part => {
+            if (urlRegex.test(part)) {
+              const link = document.createElement('a');
+              link.href = part;
+              link.style.color = "#fff";
+              link.textContent = part;
+              link.target = '_blank';
+              textDiv.appendChild(link);
+            } else {
+              textDiv.appendChild(document.createTextNode(part));
+            }
+          });
         }
         textDiv.style.wordBreak = 'break-word';
         textDiv.style.overflowWrap = 'break-word';
@@ -358,7 +430,7 @@
         textDiv.style.whiteSpace = 'pre-wrap';
         div.appendChild(textDiv);
       }
-      else { // funny mode
+      else {
         div.innerHTML += `<div>${data.text == undefined ? data : data.text}</div>`;
       }
       if (data.fileurl) {
@@ -401,6 +473,11 @@
         div.appendChild(fileElement);
       }
       messagesEl.appendChild(div);
+      const threshold = 130 + div.clientHeight;
+      const isNearBottom = messagesEl.scrollHeight - messagesEl.scrollTop - messagesEl.clientHeight < threshold;
+      if (isNearBottom && dataid > 16) {
+        messagesEl.scrollTop = messagesEl.scrollHeight;
+      }
       intervalId = setInterval(renderMessages, 0);
     }
 
@@ -438,6 +515,13 @@
     document.addEventListener('DOMContentLoaded', async function () {
       if (color.length > 0) {
         chatHeader.innerHTML = username;
+        chatHeader.innerHTML += `<button id="menuBtn" onclick="toggleMenu()" title="Menu" aria-label="Menu">&#9776;</button>
+        <div id="menu" class="hidden">
+          <ul>
+            <li><button onclick="window.open('https://github.com/forexample-u/peer', '_blank')">Github</button></li>
+            <li><button id="option2">Смена обой</button></li>
+          </ul>
+        </div>`
         chatHeader.style.color = color;
         await renderMessages();
       }
@@ -446,6 +530,15 @@
         usernameModal.style = '';
       }
     });
+
+    function toggleMenu() {
+      const menu = document.getElementById('menu');
+      if (menu.classList.contains('hidden')) {
+        menu.classList.remove('hidden');
+      } else {
+        menu.classList.add('hidden');
+      }
+    }
 
     usernameModalSubmitBtn.onclick = async () => {
       username = usernameModalInput.value.trim();
