--- a/Peer/wwwroot/peer/indexx.html
+++ b/Peer/wwwroot/peer/indexx.html
@@ -308,7 +308,7 @@
   </div>
 
   <script>
-    const host = "https://peer1.pythonanywhere.com";
+    const host = location.origin;
     const usernameModal = document.getElementById('usernameModal');
     const usernameModalInput = document.getElementById('usernameModalInput');
     const usernameModalSubmitBtn = document.getElementById('usernameModalSubmitBtn');
