--- a/static/peer/indexx.html
+++ b/static/peer/indexx.html
@@ -7,6 +7,8 @@
   <title>Peer chat</title>
   <meta property="og:title" content="Peer free chat">
   <meta property="og:description" content="free chat">
+  <meta property="og:image" content="images/peer.png">
+  <meta property="og:url" content="https://forexample-u.github.io/peer">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Peer">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='white'/%3E%3Ctext x='50' y='70' font-size='70' text-anchor='middle' font-family='Arial'%3EP%3C/text%3E%3C/svg%3E" type="image/svg+xml">
@@ -414,21 +416,19 @@
         } else {
           const text = data.text;
           const urlRegex = /(https?:\/\/[^\s]+)/g;
-          if (text !== undefined) {
-            const parts = text.split(urlRegex);
-            parts.forEach(part => {
-              if (urlRegex.test(part)) {
-                const link = document.createElement('a');
-                link.href = part;
-                link.style.color = "#fff";
-                link.textContent = part;
-                link.target = '_blank';
-                textDiv.appendChild(link);
-              } else {
-                textDiv.appendChild(document.createTextNode(part));
-              }
-            });
-          }
+          const parts = text.split(urlRegex);
+          parts.forEach(part => {
+            if (urlRegex.test(part)) {
+              const link = document.createElement('a');
+              link.href = part;
+              link.style.color = "#fff";
+              link.textContent = part;
+              link.target = '_blank';
+              textDiv.appendChild(link);
+            } else {
+              textDiv.appendChild(document.createTextNode(part));
+            }
+          });
         }
         textDiv.style.wordBreak = 'break-word';
         textDiv.style.overflowWrap = 'break-word';
