feat: add test url

--- a/static/peer/indexx.html
+++ b/static/peer/indexx.html
@@ -7,7 +7,7 @@
   <title>Peer chat</title>
   <meta property="og:title" content="Peer free chat">
   <meta property="og:description" content="free chat">
-  <meta property="og:image" content="images/peer.png">
+  <meta property="og:image" content="https://forexample-u.github.io/swaga/images/peer.png">
   <meta property="og:url" content="https://forexample-u.github.io/peer">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="Peer">
